--- a/styles/global.css
+++ b/styles/global.css
@@ -35,3 +35,16 @@ body, textarea, input, button {
 li {
   list-style: none;
 }
+
+@media (max-width: 1080px){
+  html {
+    font-size: 93.75%;
+  }
+}
+
+
+@media (max-width: 720px){
+  html {
+    font-size: 87.5%;
+  }
+}
